# ID2222-FID3016-HT25-Data-Mining

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: README.md
dumps/: README.md
jabeja/output/: 3elt.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  3elt.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.001_RNSS_3_URSS_6_A_2.0_R_1000.txt  3elt.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  3elt.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.01_RNSS_3_URSS_6_A_2.0_R_1000.txt  3elt.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_1.0E-4_RNSS_3_URSS_6_A_2.0_R_1000.txt  add20.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  add20.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_2000.txt  add20.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_2500.txt  add20.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.01_RNSS_3_URSS_6_A_2.0_R_1000.txt  add20.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_3.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  add20.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_5.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  add20.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_5.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_3000.txt  facebook.graph_NS_LOCAL_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  facebook.graph_NS_RANDOM_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  ws-250.graph_NS_HYBRID_GICP_ROUND_ROBIN_T_2.0_D_0.003_RNSS_3_URSS_6_A_2.0_R_1000.txt  (+1 more)
miner/: __init__.py  settings.py
scripts/: acquire_data.py  zipignore.sh
(+68 files in other folders)
