[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id2222-fid3016-ht25-data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.7.0",
    "kagglehub",
    "matplotlib>=3.10.7",
    "mmh3>=5.2.0",
    "networkx>=3.5",
    "psutil>=7.1.3",
    "pydantic>=2.12.3",
    "pyspark>=4.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
]

[tool.setuptools]
packages = ["miner"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # Style
    "F",    # Errors
    "UP",   # Modern Syntax
    #"SIM"  # Simplifications
]
ignore = ["E501"]   # Ignore the "Line too long"  
